Added Download content endpoints and change content sql
