# docs/swagger.json
@@ -466,6 +466,38 @@
                 }
             }
         },
+        "/contents/download": {
+            "get": {
+                "description": "Download an attachment.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "contents"
+                ],
+                "summary": "Download an attachment.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "uuid-encoded file name",
+                        "name": "file",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.APIResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/contents/{id}": {
             "get": {
                 "description": "Get Specific Content details.",
@@ -1766,11 +1798,17 @@
                 "description": {
                     "type": "string"
                 },
+                "file_size": {
+                    "type": "integer"
+                },
                 "id": {
                     "type": "integer"
                 },
                 "lesson_id": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
